# UUVController

./: CMakeLists.txt  README.md
Conf/: PIDConfig.ini
Include/spdlog/: common.h
Shared/Run/: AUVMainCP.service
Source/: main.cpp
Source/Action/: ActionHub.h  ActionMasterClass.cpp  ActionMasterClass.h
Source/Communication/: CommunicationHub.h  CommunicationMasterClass.cpp  CommunicationMasterClass.h  LockDriveClass.cpp  LockDriveClass.h  MsgReadCooker.hpp  MsgWriterCooker.hpp  NetToPCClass.cpp  NetToPCClass.h  NetToUSVMasterClass.cpp  NetToUSVMasterClass.h
Source/Condition/: ConditionHub.h  ConditionMasterClass.cpp  ConditionMasterClass.h
Source/Control/: ControlHub.h  ControlMasterClass.cpp  ControlMasterClass.h  LOSClass.cpp  LOSClass.h  LogPIDClass.cpp  LogPIDClass.h  MissionPlan.hpp  ModeTypeTools.hpp  MotionSolutionClass.cpp  MotionSolutionClass.h  RemoteControllerClass.cpp  RemoteControllerClass.h
Source/Navigation/: NavigationHub.h  NavigationMasterClass.cpp  NavigationMasterClass.h
Source/Plan/: PlanHub.h  PlanMaster.cpp  PlanMaster.h
Source/Postman/: TCPSocketClientClass.cpp  TCPSocketClientClass.h  UDPSocketBaseClass.cpp  UDPSocketBaseClass.h
Source/Sensor/: MagneticClass.cpp  MagneticClass.h
Source/Test/: BlockingQueue.cppm  TCPSocketClientClass.cpp  TCPSocketClientClass.h  TCPSocketServerClass.cpp  TCPSocketServerClass.h  TcpCommunicationClass.cpp  TcpCommunicationClass.h
Source/Tools/: BlockingQueue.cpp  BlockingQueue.h  CRCTools.hpp  ConfigTools.hpp  DataFormatTools.hpp  GISTools.hpp  LogToTextClass.cpp  LogToTextClass.h  TimeTools.hpp  (+3 more)
(+2 files in other folders)
